# portfolio_web

./: .env.example  HELPERS.md  README.md  local.yml
backend/: TODO.md  manage.py  notes.md  pyproject.toml  requirements.txt  tox.ini
backend/config/: asgi.py  settings_manager.py  urls.py  urls_third_party.py  views.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  staging.py
backend/portfolios/: admin.py  factory.py  file_upload_helpers.py  forms.py  models.py  tests.py  urls.py  views.py
backend/portfolios/factories/: certification_factory.py  education_factory.py  interest_factory.py  professional_experience_factory.py  project_factory.py  skill_factory.py  testimonial_factory.py
backend/portfolios/test_cases/: certification_test_cases.py  education_test_cases.py  interest_test_cases.py  professional_experience_test_cases.py  project_test_cases.py  skill_test_cases.py  testimonial_test_cases.py
backend/templates/: 400.html  base.html
backend/templates/account/: base.html  email.html  email_confirm.html  login.html  logout-modal.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
backend/users/: admin.py  factory.py  file_upload_helpers.py  forms.py  models.py  tests.py  urls.py  views.py
backend/utils/: decorators.py  generate_env.py  helpers.py  mixins.py  multiforms.py  snippets.py  validators.py
frontend/: package.json
(+87 files in other folders)
